// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should render success 1`] = `
Array [
  .c0 {
  position: relative;
  border-radius: 4px;
  box-shadow: 0 0 12px 0 rgba(102,102,102,0.12);
  overflow: hidden;
}

.c0:hover {
  box-shadow: 0 0 12px 0 rgba(102,102,102,0.20);
}

<div
    className="c0"
  >
    测试
  </div>,
  .c0 {
  position: relative;
  border-radius: 4px;
  box-shadow: 0 0 12px 0 rgba(102,102,102,0.12);
  overflow: hidden;
}

.c0:hover {
  box-shadow: 0 0 12px 0 rgba(102,102,102,0.20);
}

.c1 {
  position: absolute;
  top: 12px;
  right: 12px;
}

<div
    className="c0"
  >
    <div
      className="c1 muya-card-extra-wrapper"
    >
      <span>
        1
      </span>
    </div>
    测试
  </div>,
]
`;

exports[`Card should render wrapper style success 1`] = `
Array [
  .c0 {
  position: relative;
  border-radius: 4px;
  box-shadow: 0 0 12px 0 rgba(102,102,102,0.12);
  border: 1px solid rgba(238,238,238,1);
  overflow: hidden;
}

.c0:hover {
  box-shadow: 0 0 12px 0 rgba(102,102,102,0.20);
}

<div
    className="c0"
  >
    测试
  </div>,
  .c0 {
  position: relative;
  border-radius: 4px;
  overflow: hidden;
}

.c0:hover {
  box-shadow: 0 0 12px 0 rgba(102,102,102,0.20);
}

<div
    className="c0"
  >
    测试
  </div>,
]
`;
